public class ClienteRegular extends Cliente{
    public ClienteRegular(String nombre) {
        super(nombre);
    }
}
