public class Estudiante extends Cliente {
    public Estudiante(String nombre) {
        super(nombre);
    }
}
